--- a/examples/docusaurus/glean/docs/api/endpoint/client/tools.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/tools.mdx
@@ -6,7 +6,6 @@ sidebar_label: Client Tools
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -34,7 +33,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedparameters from "../../../../src/components/speakeasy-embeds/loaders/parameters.tsx";
 import Embeditems from "../../../../src/components/speakeasy-embeds/loaders/items.tsx";
@@ -87,26 +87,11 @@ TypeScript
   id="operation-get_rest_api_v1_tools_list+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.client.tools.list();
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.client.tools.list();&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -415,34 +400,11 @@ TypeScript
   id="operation-post_rest_api_v1_tools_call+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.client.tools.run({
-    name: "<value>",
-    parameters: {
-      "key": {
-        name: "<value>",
-        value: "<value>",
-      },
-    },
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.client.tools.run({&NewLine;    name: &quot;&lt;value&gt;&quot;,&NewLine;    parameters: {&NewLine;      &quot;key&quot;: {&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;        value: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;    },&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
