--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/authentication.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/authentication.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing Authentication
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   ExpandableProperty,
   ExpandablePropertyDescription,
   ExpandablePropertyTitle,
@@ -24,7 +23,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 
 <Tag slot="tag">
@@ -72,26 +72,11 @@ TypeScript
   id="operation-post_api_index_v1_rotatetoken+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.authentication.rotateToken();
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.authentication.rotateToken();&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
