--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/documents.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/documents.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing Documents
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -37,7 +36,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedauthor from "../../../../src/components/speakeasy-embeds/loaders/author.tsx";
 import Embedbody from "../../../../src/components/speakeasy-embeds/loaders/body.tsx";
@@ -102,30 +102,11 @@ TypeScript
   id="operation-post_api_index_v1_indexdocument+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.documents.addOrUpdate({
-    document: {
-      datasource: "<value>",
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.documents.addOrUpdate({&NewLine;    document: {&NewLine;      datasource: &quot;&lt;value&gt;&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -942,29 +923,11 @@ TypeScript
   id="operation-post_api_index_v1_indexdocuments+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.documents.index({
-    datasource: "<value>",
-    documents: [],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.documents.index({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    documents: [],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1805,30 +1768,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexdocuments+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.documents.bulkIndex({
-    uploadId: "<id>",
-    datasource: "<value>",
-    documents: [],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.documents.bulkIndex({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    documents: [],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2776,26 +2720,11 @@ TypeScript
   id="operation-post_api_index_v1_processalldocuments+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.documents.processAll();
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.documents.processAll();&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2895,30 +2824,11 @@ TypeScript
   id="operation-post_api_index_v1_deletedocument+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.documents.delete({
-    datasource: "<value>",
-    objectType: "<value>",
-    id: "<id>",
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.documents.delete({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    objectType: &quot;&lt;value&gt;&quot;,&NewLine;    id: &quot;&lt;id&gt;&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -3094,29 +3004,11 @@ TypeScript
   id="operation-post_api_index_v1_debug_datasource_document+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.documents.debug({
-    objectType: "Article",
-    docId: "art123",
-  }, "<value>");
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.documents.debug({&NewLine;    objectType: &quot;Article&quot;,&NewLine;    docId: &quot;art123&quot;,&NewLine;  }, &quot;&lt;value&gt;&quot;);&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -3788,33 +3680,11 @@ TypeScript
   id="operation-post_api_index_v1_debug_datasource_documents+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.documents.debugMany({
-    debugDocuments: [
-      {
-        objectType: "Article",
-        docId: "art123",
-      },
-    ],
-  }, "<value>");
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.documents.debugMany({&NewLine;    debugDocuments: [&NewLine;      {&NewLine;        objectType: &quot;Article&quot;,&NewLine;        docId: &quot;art123&quot;,&NewLine;      },&NewLine;    ],&NewLine;  }, &quot;&lt;value&gt;&quot;);&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -4244,31 +4114,11 @@ TypeScript
   id="operation-post_api_index_v1_checkdocumentaccess+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.documents.checkAccess({
-    datasource: "<value>",
-    objectType: "<value>",
-    docId: "<id>",
-    userEmail: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.documents.checkAccess({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    objectType: &quot;&lt;value&gt;&quot;,&NewLine;    docId: &quot;&lt;id&gt;&quot;,&NewLine;    userEmail: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -4507,30 +4357,11 @@ TypeScript
   id="operation-post_api_index_v1_getdocumentstatus+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.documents.status({
-    datasource: "<value>",
-    objectType: "<value>",
-    docId: "<id>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.documents.status({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    objectType: &quot;&lt;value&gt;&quot;,&NewLine;    docId: &quot;&lt;id&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -4817,28 +4648,11 @@ TypeScript
   id="operation-post_api_index_v1_getdocumentcount+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.documents.count({
-    datasource: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.documents.count({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
