--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/people.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/people.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing People
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -38,7 +37,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedadditionalfields from "../../../../src/components/speakeasy-embeds/loaders/additionalfields.tsx";
 import Embeddatasourceprofiles from "../../../../src/components/speakeasy-embeds/loaders/datasourceprofiles.tsx";
@@ -103,28 +103,11 @@ TypeScript
   id="operation-post_api_index_v1_debug_datasource_user+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.people.debug({
-    email: "u1@foo.com",
-  }, "<value>");
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.people.debug({&NewLine;    email: &quot;u1@foo.com&quot;,&NewLine;  }, &quot;&lt;value&gt;&quot;);&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -563,28 +546,11 @@ TypeScript
   id="operation-post_api_index_v1_getusercount+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.people.count({
-    datasource: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.people.count({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -748,37 +714,11 @@ TypeScript
   id="operation-post_api_index_v1_indexemployee+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.index({
-    employee: {
-      email: "Jerrold_Hermann@hotmail.com",
-      department: "<value>",
-      datasourceProfiles: [
-        {
-          datasource: "github",
-          handle: "<value>",
-        },
-      ],
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.index({&NewLine;    employee: {&NewLine;      email: &quot;Jerrold_Hermann@hotmail.com&quot;,&NewLine;      department: &quot;&lt;value&gt;&quot;,&NewLine;      datasourceProfiles: [&NewLine;        {&NewLine;          datasource: &quot;github&quot;,&NewLine;          handle: &quot;&lt;value&gt;&quot;,&NewLine;        },&NewLine;      ],&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1704,60 +1644,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexemployees+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.bulkIndex({
-    uploadId: "<id>",
-    employees: [
-      {
-        email: "Robin.Stoltenberg@yahoo.com",
-        department: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-      },
-      {
-        email: "Robin.Stoltenberg@yahoo.com",
-        department: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-      },
-      {
-        email: "Robin.Stoltenberg@yahoo.com",
-        department: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.bulkIndex({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    employees: [&NewLine;      {&NewLine;        email: &quot;Robin.Stoltenberg@yahoo.com&quot;,&NewLine;        department: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;      },&NewLine;      {&NewLine;        email: &quot;Robin.Stoltenberg@yahoo.com&quot;,&NewLine;        department: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;      },&NewLine;      {&NewLine;        email: &quot;Robin.Stoltenberg@yahoo.com&quot;,&NewLine;        department: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2780,26 +2671,11 @@ TypeScript
   id="operation-post_api_index_v1_processallemployeesandteams+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.processAllEmployeesAndTeams();
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.processAllEmployeesAndTeams();&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2847,28 +2723,11 @@ TypeScript
   id="operation-post_api_index_v1_deleteemployee+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.delete({
-    employeeEmail: "<value>",
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.delete({&NewLine;    employeeEmail: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2989,50 +2848,11 @@ TypeScript
   id="operation-post_api_index_v1_indexteam+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.indexTeam({
-    team: {
-      id: "<id>",
-      name: "<value>",
-      datasourceProfiles: [
-        {
-          datasource: "github",
-          handle: "<value>",
-        },
-        {
-          datasource: "github",
-          handle: "<value>",
-        },
-        {
-          datasource: "github",
-          handle: "<value>",
-        },
-      ],
-      members: [
-        {
-          email: "Nasir.Hilll73@hotmail.com",
-        },
-      ],
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.indexTeam({&NewLine;    team: {&NewLine;      id: &quot;&lt;id&gt;&quot;,&NewLine;      name: &quot;&lt;value&gt;&quot;,&NewLine;      datasourceProfiles: [&NewLine;        {&NewLine;          datasource: &quot;github&quot;,&NewLine;          handle: &quot;&lt;value&gt;&quot;,&NewLine;        },&NewLine;        {&NewLine;          datasource: &quot;github&quot;,&NewLine;          handle: &quot;&lt;value&gt;&quot;,&NewLine;        },&NewLine;        {&NewLine;          datasource: &quot;github&quot;,&NewLine;          handle: &quot;&lt;value&gt;&quot;,&NewLine;        },&NewLine;      ],&NewLine;      members: [&NewLine;        {&NewLine;          email: &quot;Nasir.Hilll73@hotmail.com&quot;,&NewLine;        },&NewLine;      ],&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -3508,28 +3328,11 @@ TypeScript
   id="operation-post_api_index_v1_deleteteam+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.deleteTeam({
-    id: "<id>",
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.deleteTeam({&NewLine;    id: &quot;&lt;id&gt;&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -3629,75 +3432,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexteams+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.people.bulkIndexTeams({
-    uploadId: "<id>",
-    teams: [
-      {
-        id: "<id>",
-        name: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-        members: [],
-      },
-      {
-        id: "<id>",
-        name: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-        members: [],
-      },
-      {
-        id: "<id>",
-        name: "<value>",
-        datasourceProfiles: [
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-          {
-            datasource: "github",
-            handle: "<value>",
-          },
-        ],
-        members: [],
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.people.bulkIndexTeams({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    teams: [&NewLine;      {&NewLine;        id: &quot;&lt;id&gt;&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;        members: [],&NewLine;      },&NewLine;      {&NewLine;        id: &quot;&lt;id&gt;&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;        members: [],&NewLine;      },&NewLine;      {&NewLine;        id: &quot;&lt;id&gt;&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;        datasourceProfiles: [&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;          {&NewLine;            datasource: &quot;github&quot;,&NewLine;            handle: &quot;&lt;value&gt;&quot;,&NewLine;          },&NewLine;        ],&NewLine;        members: [],&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
