--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/permissions.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/permissions.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing Permissions
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -33,7 +32,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedallowedgroupintersections from "../../../../src/components/speakeasy-embeds/loaders/allowedgroupintersections.tsx";
 import Embedallowedusers from "../../../../src/components/speakeasy-embeds/loaders/allowedusers.tsx";
@@ -88,29 +88,11 @@ TypeScript
   id="operation-post_api_index_v1_updatepermissions+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.updatePermissions({
-    datasource: "<value>",
-    permissions: {},
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.updatePermissions({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    permissions: {},&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -482,32 +464,11 @@ TypeScript
   id="operation-post_api_index_v1_indexuser+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.indexUser({
-    datasource: "<value>",
-    user: {
-      email: "Art.Schaden@hotmail.com",
-      name: "<value>",
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.indexUser({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    user: {&NewLine;      email: &quot;Art.Schaden@hotmail.com&quot;,&NewLine;      name: &quot;&lt;value&gt;&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -774,43 +735,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexusers+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.bulkIndexUsers({
-    uploadId: "<id>",
-    datasource: "<value>",
-    users: [
-      {
-        email: "Ivory_Cummerata@hotmail.com",
-        name: "<value>",
-      },
-      {
-        email: "Ivory_Cummerata@hotmail.com",
-        name: "<value>",
-      },
-      {
-        email: "Ivory_Cummerata@hotmail.com",
-        name: "<value>",
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.bulkIndexUsers({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    users: [&NewLine;      {&NewLine;        email: &quot;Ivory_Cummerata@hotmail.com&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;      {&NewLine;        email: &quot;Ivory_Cummerata@hotmail.com&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;      {&NewLine;        email: &quot;Ivory_Cummerata@hotmail.com&quot;,&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1170,31 +1099,11 @@ TypeScript
   id="operation-post_api_index_v1_indexgroup+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.indexGroup({
-    datasource: "<value>",
-    group: {
-      name: "<value>",
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.indexGroup({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    group: {&NewLine;      name: &quot;&lt;value&gt;&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1398,37 +1307,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexgroups+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.bulkIndexGroups({
-    uploadId: "<id>",
-    datasource: "<value>",
-    groups: [
-      {
-        name: "<value>",
-      },
-      {
-        name: "<value>",
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.bulkIndexGroups({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    groups: [&NewLine;      {&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;      {&NewLine;        name: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1728,31 +1611,11 @@ TypeScript
   id="operation-post_api_index_v1_indexmembership+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.indexMembership({
-    datasource: "<value>",
-    membership: {
-      groupName: "<value>",
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.indexMembership({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    membership: {&NewLine;      groupName: &quot;&lt;value&gt;&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2006,34 +1869,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexmemberships+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.bulkIndexMemberships({
-    uploadId: "<id>",
-    datasource: "<value>",
-    memberships: [
-      {},
-      {},
-      {},
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.bulkIndexMemberships({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    memberships: [&NewLine;      {},&NewLine;      {},&NewLine;      {},&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2359,26 +2199,11 @@ TypeScript
   id="operation-post_api_index_v1_processallmemberships+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.processMemberships();
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.processMemberships();&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2475,29 +2300,11 @@ TypeScript
   id="operation-post_api_index_v1_deleteuser+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.deleteUser({
-    datasource: "<value>",
-    email: "Ed.Johnston@gmail.com",
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.deleteUser({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    email: &quot;Ed.Johnston@gmail.com&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2642,29 +2449,11 @@ TypeScript
   id="operation-post_api_index_v1_deletegroup+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.deleteGroup({
-    datasource: "<value>",
-    groupName: "<value>",
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.deleteGroup({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    groupName: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -2812,31 +2601,11 @@ TypeScript
   id="operation-post_api_index_v1_deletemembership+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.deleteMembership({
-    datasource: "<value>",
-    membership: {
-      groupName: "<value>",
-    },
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.deleteMembership({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    membership: {&NewLine;      groupName: &quot;&lt;value&gt;&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -3087,33 +2856,11 @@ TypeScript
   id="operation-post_api_index_v1_betausers+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.permissions.authorizeBetaUsers({
-    datasource: "<value>",
-    emails: [
-      "Neil92@gmail.com",
-      "Alejandrin_Boyer4@hotmail.com",
-      "Shyanne_McLaughlin95@hotmail.com",
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.permissions.authorizeBetaUsers({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;    emails: [&NewLine;      &quot;Neil92@gmail.com&quot;,&NewLine;      &quot;Alejandrin_Boyer4@hotmail.com&quot;,&NewLine;      &quot;Shyanne_McLaughlin95@hotmail.com&quot;,&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
