--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/shortcuts.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/shortcuts.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing Shortcuts
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -29,7 +28,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 
 <Tag slot="tag">
@@ -80,42 +80,11 @@ TypeScript
   id="operation-post_api_index_v1_bulkindexshortcuts+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.shortcuts.bulkIndex({
-    uploadId: "<id>",
-    shortcuts: [
-      {
-        inputAlias: "<value>",
-        destinationUrl: "https://plump-tune-up.biz/",
-        createdBy: "<value>",
-        intermediateUrl: "https://lean-sightseeing.net",
-      },
-      {
-        inputAlias: "<value>",
-        destinationUrl: "https://plump-tune-up.biz/",
-        createdBy: "<value>",
-        intermediateUrl: "https://lean-sightseeing.net",
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.shortcuts.bulkIndex({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    shortcuts: [&NewLine;      {&NewLine;        inputAlias: &quot;&lt;value&gt;&quot;,&NewLine;        destinationUrl: &quot;https://plump-tune-up.biz/&quot;,&NewLine;        createdBy: &quot;&lt;value&gt;&quot;,&NewLine;        intermediateUrl: &quot;https://lean-sightseeing.net&quot;,&NewLine;      },&NewLine;      {&NewLine;        inputAlias: &quot;&lt;value&gt;&quot;,&NewLine;        destinationUrl: &quot;https://plump-tune-up.biz/&quot;,&NewLine;        createdBy: &quot;&lt;value&gt;&quot;,&NewLine;        intermediateUrl: &quot;https://lean-sightseeing.net&quot;,&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -611,45 +580,11 @@ TypeScript
   id="operation-post_api_index_v1_uploadshortcuts+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.shortcuts.upload({
-    uploadId: "<id>",
-    shortcuts: [
-      {
-        inputAlias: "<value>",
-        destinationUrl: "https://majestic-pharmacopoeia.info/",
-        createdBy: "<value>",
-      },
-      {
-        inputAlias: "<value>",
-        destinationUrl: "https://majestic-pharmacopoeia.info/",
-        createdBy: "<value>",
-      },
-      {
-        inputAlias: "<value>",
-        destinationUrl: "https://majestic-pharmacopoeia.info/",
-        createdBy: "<value>",
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.shortcuts.upload({&NewLine;    uploadId: &quot;&lt;id&gt;&quot;,&NewLine;    shortcuts: [&NewLine;      {&NewLine;        inputAlias: &quot;&lt;value&gt;&quot;,&NewLine;        destinationUrl: &quot;https://majestic-pharmacopoeia.info/&quot;,&NewLine;        createdBy: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;      {&NewLine;        inputAlias: &quot;&lt;value&gt;&quot;,&NewLine;        destinationUrl: &quot;https://majestic-pharmacopoeia.info/&quot;,&NewLine;        createdBy: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;      {&NewLine;        inputAlias: &quot;&lt;value&gt;&quot;,&NewLine;        destinationUrl: &quot;https://majestic-pharmacopoeia.info/&quot;,&NewLine;        createdBy: &quot;&lt;value&gt;&quot;,&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
