--- a/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
@@ -110,7 +110,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderate({\n    model: \"Durango\",\n    inputs: [\n      \"<value 1>\",\n      \"<value 2>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.classifiers.moderate({&NewLine;    model: &quot;Durango&quot;,&NewLine;    inputs: [&NewLine;      &quot;&lt;value 1&gt;&quot;,&NewLine;      &quot;&lt;value 2&gt;&quot;,&NewLine;    ],&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -883,7 +883,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderateChat({\n    inputs: [\n      {\n        content: \"<value>\",\n        role: \"tool\",\n      },\n    ],\n    model: \"LeBaron\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.classifiers.moderateChat({&NewLine;    inputs: [&NewLine;      {&NewLine;        content: &quot;&lt;value&gt;&quot;,&NewLine;        role: &quot;tool&quot;,&NewLine;      },&NewLine;    ],&NewLine;    model: &quot;LeBaron&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -9681,7 +9681,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classify({\n    model: \"Silverado\",\n    inputs: [\n      \"<value 1>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.classifiers.classify({&NewLine;    model: &quot;Silverado&quot;,&NewLine;    inputs: [&NewLine;      &quot;&lt;value 1&gt;&quot;,&NewLine;    ],&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -10408,7 +10408,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classifyChat({\n    model: \"Camry\",\n    inputs: [\n      {\n        messages: [\n          {\n            content: \"<value>\",\n            role: \"system\",\n          },\n        ],\n      },\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.classifiers.classifyChat({&NewLine;    model: &quot;Camry&quot;,&NewLine;    inputs: [&NewLine;      {&NewLine;        messages: [&NewLine;          {&NewLine;            content: &quot;&lt;value&gt;&quot;,&NewLine;            role: &quot;system&quot;,&NewLine;          },&NewLine;        ],&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
