--- a/examples/docusaurus/glean/docs/api/endpoint/client/messages.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/messages.mdx
@@ -6,7 +6,6 @@ sidebar_label: Client Messages
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -35,7 +34,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedallclusteredresults from "../../../../src/components/speakeasy-embeds/loaders/allclusteredresults.tsx";
 import Embedattachments from "../../../../src/components/speakeasy-embeds/loaders/attachments.tsx";
@@ -102,29 +102,11 @@ TypeScript
 
 <SectionContent slot="content" id="operation-messages+code-samples+typescript">
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.client.messages.retrieve({
-    idType: "CONVERSATION_ID",
-    id: "<id>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.client.messages.retrieve({&NewLine;    idType: &quot;CONVERSATION_ID&quot;,&NewLine;    id: &quot;&lt;id&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
