--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/datasources.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/datasources.mdx
@@ -6,7 +6,6 @@ sidebar_label: Indexing Datasources
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   Embed,
   EmbedProvider,
   EmbedTrigger,
@@ -37,7 +36,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 import Embedpropertydefinitions from "../../../../src/components/speakeasy-embeds/loaders/propertydefinitions.tsx";
 import Embedpropertygroups from "../../../../src/components/speakeasy-embeds/loaders/propertygroups.tsx";
@@ -93,39 +93,11 @@ TypeScript
   id="operation-post_api_index_v1_adddatasource+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  await glean.indexing.datasources.add({
-    name: "<value>",
-    urlRegex: "https://example-company.datasource.com/.*",
-    quicklinks: [
-      {
-        iconConfig: {
-          color: "#343CED",
-          key: "person_icon",
-          iconType: "GLYPH",
-          name: "user",
-        },
-      },
-    ],
-  });
-
-
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await glean.indexing.datasources.add({&NewLine;    name: &quot;&lt;value&gt;&quot;,&NewLine;    urlRegex: &quot;https://example-company.datasource.com/.*&quot;,&NewLine;    quicklinks: [&NewLine;      {&NewLine;        iconConfig: {&NewLine;          color: &quot;#343CED&quot;,&NewLine;          key: &quot;person_icon&quot;,&NewLine;          iconType: &quot;GLYPH&quot;,&NewLine;          name: &quot;user&quot;,&NewLine;        },&NewLine;      },&NewLine;    ],&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
@@ -1445,28 +1417,11 @@ TypeScript
   id="operation-post_api_index_v1_getdatasourceconfig+code-samples+typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Glean } from "@gleanwork/api-client";
-
-const glean = new Glean({
-  apiToken: "GLEAN_API_TOKEN",
-});
-
-async function run() {
-  const result = await glean.indexing.datasources.retrieveConfig({
-    datasource: "<value>",
-  });
-
-  console.log(result);
-}
-
-run();
-
-```
-
-</CodeSample>
+<TryItNow
+  dependencyUrlPrefix="/try-it-now"
+  defaultValue="import { Glean } from &quot;@gleanwork/api-client&quot;;&NewLine;&NewLine;const glean = new Glean({&NewLine;  apiToken: &quot;GLEAN_API_TOKEN&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await glean.indexing.datasources.retrieveConfig({&NewLine;    datasource: &quot;&lt;value&gt;&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  packageName="@gleanwork/api-client"
+/>
 
 </SectionContent>
 
