--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -104,7 +104,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.ocr.process({\n    model: \"CX-9\",\n    document: {\n      documentUrl: \"https://upset-labourer.net/\",\n      type: \"document_url\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.ocr.process({&NewLine;    model: &quot;CX-9&quot;,&NewLine;    document: {&NewLine;      documentUrl: &quot;https://upset-labourer.net/&quot;,&NewLine;      type: &quot;document_url&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
