--- a/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/documents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/documents/page.mdx
@@ -91,7 +91,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.list({\n    libraryId: \"5c3ca4cd-62bc-4c71-ad8a-1531ae80d078\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.list({&NewLine;    libraryId: &quot;5c3ca4cd-62bc-4c71-ad8a-1531ae80d078&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -715,7 +715,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.upload({\n    libraryId: \"a02150d9-5ee0-4877-b62c-28b1fcdf3b76\",\n    requestBody: {\n      file: await openAsBlob(\"example.file\"),\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;import { openAsBlob } from &quot;node:fs&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.upload({&NewLine;    libraryId: &quot;a02150d9-5ee0-4877-b62c-28b1fcdf3b76&quot;,&NewLine;    requestBody: {&NewLine;      file: await openAsBlob(&quot;example.file&quot;),&NewLine;    },&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -1315,7 +1315,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.get({\n    libraryId: \"03d908c8-90a1-44fd-bf3a-8490fb7c9a03\",\n    documentId: \"90973aec-0508-4375-8b00-91d732414745\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.get({&NewLine;    libraryId: &quot;03d908c8-90a1-44fd-bf3a-8490fb7c9a03&quot;,&NewLine;    documentId: &quot;90973aec-0508-4375-8b00-91d732414745&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -1799,7 +1799,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.update({\n    libraryId: \"3ddd8d93-dca5-4a6d-980d-173226c35742\",\n    documentId: \"2a25e44c-b160-40ca-b5c2-b65fb2fcae34\",\n    documentUpdateIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.update({&NewLine;    libraryId: &quot;3ddd8d93-dca5-4a6d-980d-173226c35742&quot;,&NewLine;    documentId: &quot;2a25e44c-b160-40ca-b5c2-b65fb2fcae34&quot;,&NewLine;    documentUpdateIn: {},&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -2323,7 +2323,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.delete({\n    libraryId: \"005daae9-d42e-407d-82d7-2261c6a1496c\",\n    documentId: \"edc236b0-baff-49a9-884b-4ca36a258da4\",\n  });\n\n\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await mistral.beta.libraries.documents.delete({&NewLine;    libraryId: &quot;005daae9-d42e-407d-82d7-2261c6a1496c&quot;,&NewLine;    documentId: &quot;edc236b0-baff-49a9-884b-4ca36a258da4&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -2463,7 +2463,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.textContent({\n    libraryId: \"1d177215-3b6b-45ba-9fa9-baf773223bec\",\n    documentId: \"60214c91-2aba-4692-a4e6-a53365de8caf\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.textContent({&NewLine;    libraryId: &quot;1d177215-3b6b-45ba-9fa9-baf773223bec&quot;,&NewLine;    documentId: &quot;60214c91-2aba-4692-a4e6-a53365de8caf&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -2668,7 +2668,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.status({\n    libraryId: \"e6906f70-368f-4155-80da-c1718f01bc43\",\n    documentId: \"2c904915-d831-4e9d-a345-8ce405bcef66\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.status({&NewLine;    libraryId: &quot;e6906f70-368f-4155-80da-c1718f01bc43&quot;,&NewLine;    documentId: &quot;2c904915-d831-4e9d-a345-8ce405bcef66&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -2888,7 +2888,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.getSignedUrl({\n    libraryId: \"23cf6904-a602-4ee8-9f5b-8efc557c336d\",\n    documentId: \"48598486-df71-4994-acbb-1133c72efa8c\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.getSignedUrl({&NewLine;    libraryId: &quot;23cf6904-a602-4ee8-9f5b-8efc557c336d&quot;,&NewLine;    documentId: &quot;48598486-df71-4994-acbb-1133c72efa8c&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -3079,7 +3079,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.extractedTextSignedUrl({\n    libraryId: \"a6f15de3-1e82-4f95-af82-851499042ef8\",\n    documentId: \"9749d4f9-24e5-4ca2-99a3-a406863f805d\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.documents.extractedTextSignedUrl({&NewLine;    libraryId: &quot;a6f15de3-1e82-4f95-af82-851499042ef8&quot;,&NewLine;    documentId: &quot;9749d4f9-24e5-4ca2-99a3-a406863f805d&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
@@ -3270,7 +3270,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.reprocess({\n    libraryId: \"51b29371-de8f-4ba4-932b-a0bafb3a7f64\",\n    documentId: \"3052422c-49ca-45ac-a918-cadb35d61fd8\",\n  });\n\n\n}\n\nrun();\n`}
+  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  await mistral.beta.libraries.documents.reprocess({&NewLine;    libraryId: &quot;51b29371-de8f-4ba4-932b-a0bafb3a7f64&quot;,&NewLine;    documentId: &quot;3052422c-49ca-45ac-a918-cadb35d61fd8&quot;,&NewLine;  });&NewLine;&NewLine;&NewLine;}&NewLine;&NewLine;run();&NewLine;"
   packageName="@mistralai/mistralai"
 />
 
